syntax = "proto3";
package inner;
option  go_package = "/inner";

// 加入频道
message JoinChannelReq
{
    // 频道key
    string Channel     = 1;

    // 玩家actorId
    string ActorId     = 2;

    // 玩家网关session
    string GSession    = 3;
}

// 加入频道反馈
message JoinChannelResp
{
    int32 error = 1;
}

// 离开频道
message LeaveChannelReq
{
    // 频道key
    string Channel     = 1;

    // 玩家actorId
    string ActorId     = 2;
}

// 频道广播消息
message MessageToChannel
{
    // 频道key
    string Channel     = 1;

    // 消息名称
    string Msgname     = 2;

    // proto 消息体
    bytes Data         = 3;
}